dbus-1: fix change notifications for multiple keys

This fixes a rather obvious misuse of the libdbus-1 message decoding
API.

https://bugzilla.gnome.org/show_bug.cgi?id=669915